Update README with JavaFX 21 compilation steps
Added compilation instructions for JavaFX 21.